src/objects/Opportunity_Location__c.object
<CustomObject>
    <fields>
        <fullName>Include_in_map_view__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want this location to show up in a view of where this opportunity is going to be executed?</inlineHelpText>
        <label>Include in map view?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunity Locations</relationshipLabel>
        <relationshipName>Opportunity_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Opportunity_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Location</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>Opportunity Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>